--- a/CSharpProgrammingBasicsHelloWorld-Lab_9_10/CSharpProgrammingBasicsClasses/CSharpProgrammingBasicsClasses.csproj
+++ b/CSharpProgrammingBasicsHelloWorld-Lab_9_10/CSharpProgrammingBasicsClasses/CSharpProgrammingBasicsClasses.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Accounts\Account.cs" />
     <Compile Include="Accounts\DepositAccount.cs" />
+    <Compile Include="Common\Attributes.cs" />
     <Compile Include="Common\CreateAccountType.cs" />
     <Compile Include="Common\Delegates.cs" />
     <Compile Include="Helpers\AccountHelper.cs" />
