--- a/CSharpProgrammingBasicsHelloWorld-Lab_9_10/CSharpProgrammingBasicsClasses/CSharpProgrammingBasicsClasses.csproj
+++ b/CSharpProgrammingBasicsHelloWorld-Lab_9_10/CSharpProgrammingBasicsClasses/CSharpProgrammingBasicsClasses.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Accounts\DepositAccount.cs" />
     <Compile Include="Common\Attributes.cs" />
     <Compile Include="Common\CreateAccountType.cs" />
+    <Compile Include="Common\CurrencyMismatchException.cs" />
     <Compile Include="Common\Delegates.cs" />
     <Compile Include="Helpers\AccountHelper.cs" />
     <Compile Include="Interfaces\IDepositAccount.cs" />
