--- a/CSharpProgrammingBasicsHelloWorld-Lab_9_10/CSharpProgrammingBasicsClasses/CSharpProgrammingBasicsClasses.csproj
+++ b/CSharpProgrammingBasicsHelloWorld-Lab_9_10/CSharpProgrammingBasicsClasses/CSharpProgrammingBasicsClasses.csproj
@@ -45,6 +45,8 @@
     <Compile Include="Common\CreateAccountType.cs" />
     <Compile Include="Common\CurrencyMismatchException.cs" />
     <Compile Include="Common\Delegates.cs" />
+    <Compile Include="Common\ExceptionLogger.cs" />
+    <Compile Include="Common\TransactionLimitExceeded.cs" />
     <Compile Include="Extensions\ProcessorExtensions.cs" />
     <Compile Include="Helpers\AccountHelper.cs" />
     <Compile Include="Interfaces\IDepositAccount.cs" />
