--- a/SOLID-Lab/Labs/01.03 SOLID_SRP/ExampleSrp/ExampleSrp/ExampleSrp.csproj
+++ b/SOLID-Lab/Labs/01.03 SOLID_SRP/ExampleSrp/ExampleSrp/ExampleSrp.csproj
@@ -40,11 +40,24 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TheAvg\AcmeCar.cs" />
+    <Compile Include="TheAvg\CarCloudLog.cs" />
+    <Compile Include="TheAvg\CarComputerLog.cs" />
+    <Compile Include="TheAvg\LockState.cs" />
     <Compile Include="TheBad\AcmeCar.cs" />
+    <Compile Include="TheBest\AcmeCar.cs" />
+    <Compile Include="TheBest\ICloudLog.cs" />
+    <Compile Include="TheBest\ILog.cs" />
+    <Compile Include="TheBest\IPCLog.cs" />
+    <Compile Include="TheBest\LockState.cs" />
+    <Compile Include="TheBest\MakeCloudLog.cs" />
+    <Compile Include="TheBest\MakePCLog.cs" />
+    <Compile Include="TheGood\AcmeCar.cs" />
+    <Compile Include="TheGood\LockState.cs" />
+    <Compile Include="TheGood\Make_Cloud_Log.cs" />
+    <Compile Include="TheGood\Make_PC_Log.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TheGood\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
